# BeagleBone-Driver-Libs

./: CMakeLists.txt  README.md
peripheral_Driver/: CMakeLists.txt  bb_gpio.c  bb_gpio.h  bb_i2c.c  bb_i2c.h
test/: CMakeLists.txt  main.c  main.h
tool/: bbgw_access.sh  build.sh  scp_bbgw.sh
